tests/ui/issues/issue-34349.stderr
error[E0277]: expected a `Fn()` closure, found `{closure@$DIR/issue-34349.rs:16:17: 16:19}`
  --> $DIR/issue-34349.rs:21:11
   |
LL |     apply(diary);
   |     ----- ^^^^^ expected an `Fn()` closure, found `{closure@$DIR/issue-34349.rs:16:17: 16:19}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for closure `{closure@$DIR/issue-34349.rs:16:17: 16:19}`
   = note: wrap the `{closure@$DIR/issue-34349.rs:16:17: 16:19}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/issue-34349.rs:16:17: 16:19}` implements `FnMut`, but it must implement `Fn`, which is more general
note: required by a bound in `apply`
  --> $DIR/issue-34349.rs:11:32
   |
LL |     fn apply<F>(f: F) where F: Fn() {
   |                                ^^^^ required by this bound in `apply`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
